# flake8_no_emoji

./: LICENSE  README.md  main.py  pyproject.toml  setup.cfg
flake8-no-emoji/: __init__.py  checker.py
flake8_no_emoji/: __init__.py  categories.py  checker.py
tests/: test_checker.py
