[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flake8-no-emoji"
version = "0.1.0"
description = "Flake8 plugin to detect emojis in code"
authors = [{ name = "AlgorithmAlchemy" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = ["regex"]

[project.entry-points."flake8.extension"]
EMO = "flake8_no_emoji:NoEmojiChecker"
