[metadata]
name = flake8-no-emoji
version = 0.1.0
author = AlgorithmAlchemy
description = A Flake8 plugin that detects emojis in Python source code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlgorithmAlchemy/flake8-no-emoji
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    regex

[options.entry_points]
flake8.extension =
    EMO = flake8_no_emoji:NoEmojiChecker

[flake8]
max-line-length = 88
select = EMO
